# COMMS-EdgeAI-

./: .gitignore  README.md  package-lock.json  tailwind.config.ts
JARVIS/: README.md  package.json
JARVIS/server/: routes.ts  storage.ts
JARVIS/shared/: schema.ts
JARVIS/thingsboard-integration/: package.json  render.yaml  server.ts
edge vision baseline for satellite payload scene triage/: README.md
edge vision baseline for satellite payload scene triage/docs/: dataset-card.md
model/face-recognition/: face-recognition-service.ts
projects/orbital-vision-payload/: pyproject.toml
projects/orbital-vision-payload/docs/: model-card.md
projects/orbital-vision-payload/reports/: README.md
projects/orbital-vision-payload/src/orbital_vision_payload/: __init__.py  cli.py  datasets.py  evaluation.py  model.py
rf singal calssification and edge inference/: README.md  pyproject.toml
rf singal calssification and edge inference/docs/: dataset-card.md  model-card.md  public-real-data.md  quantization-report.md
rf singal calssification and edge inference/reports/: real_satnogs_uresat1_7883687_eval.json
rf singal calssification and edge inference/src/rf_edge_sentinel/: __init__.py  __main__.py  api.py  cli.py  cnn.py  evaluation.py  public_data.py  quantization.py  scenarios.py  signals.py  spectrogram.py
rf-edge-sentinel/: README.md
rf-edge-sentinel/artifacts/: qdq_uint8_uint8.onnx  qop_uint8_int8.onnx  qop_uint8_uint8.onnx  rf_centroid_model.json  rf_edge_model.json  (+7 more)
thingsboard-integration/: DEPLOYMENT.md  README.md  render.yaml  tsconfig.json
(+42 files in other folders)
