[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-vision-payload"
version = "0.1.0"
description = "Real-data edge vision baseline for satellite payload scene triage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10"
]

[project.scripts]
orbital-vision-payload = "orbital_vision_payload.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
